feature/added-explanations-to-view

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -86,6 +86,11 @@
     <code [innerHTML]="code2"></code>
 </pre>
 
+<p>
+    For this solution, we have assigned our objects into JavasScript's Sets which disallow for duplicate items being added into them.
+    We can clearly see how blazing fast this algorithm is.
+</p>
+
 <table style="margin-bottom: 60px;">
     <tr>
         <th>List#1</th>
@@ -141,6 +146,8 @@
 <br/>
 <hr/>
 <br/>
+
+<p>For the following two solutions, I have created two different methods to compare object values and only keep the objects which have all distinct values.</p>
 
 <h3>The solution to unique valued objects #1:</h3>
 
